# Soroban-Cookbook-

./: CONTRIBUTING.md  Cargo.toml  PHASE_AUDIT_LOG.md  README.md  phase 8 issues.md
.github/workflows/: test.yml
book/src/: SUMMARY.md
book/src/guides/: macos-setup.md  testing.md
docs/: README.md  benchmarks.md  gas-benchmarks.md
examples/advanced/02-timelock/src/: test.rs
examples/basics/: README.md
examples/basics/01-hello-world/: README.md
examples/basics/02-storage-patterns/src/: test.rs
examples/basics/03-authentication/src/: test.rs
examples/basics/04-events/: Cargo.toml
examples/basics/05-error-handling/: README.md
examples/basics/06-type-conversions/src/: test.rs
examples/basics/instance-storage/: README.md
examples/hello-world/src/: test.rs
tests/integration/: Cargo.toml
