[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
soroban-validation = { path = "../../shared" }
hello-world = { path = "../../examples/basics/01-hello-world" }
storage-patterns = { path = "../../examples/basics/02-storage-patterns" }
authentication = { path = "../../examples/basics/03-authentication" }
custom-errors = { path = "../../examples/basics/03-custom-errors" }
events_structured = { path = "../../examples/basics/04-events", package = "events" }
validation-patterns = { path = "../../examples/basics/06-validation-patterns" }
ajo-factory = { path = "../../examples/intermediate/ajo-factory" }
ajo = { path = "../../examples/intermediate/ajo" }
multi-sig-patterns = { path = "../../examples/intermediate/multi-sig-patterns" }
multi-party-auth = { path = "../../examples/advanced/01-multi-party-auth" }
custom-errors = { path = "../../examples/basics/03-custom-errors" }
validation-patterns = { path = "../../examples/basics/06-validation-patterns" }
custom-structs = { path = "../../examples/basics/08-custom-structs" }
ajo-factory = { path = "../../examples/intermediate/ajo-factory" }
multi-sig-patterns = { path = "../../examples/intermediate/multi-sig-patterns" }
timelock = { path = "../../examples/advanced/02-timelock" }
token-wrapper = { path = "../../examples/tokens/token-wrapper" }
